--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   shared_infrastructure:
     path: shared_infrastructure
   meta: ^1.15.0
+  std_uritemplate: ^1.0.1
+  
 
 dev_dependencies:
   # build_runner: ^2.4.11
