--- a/shared_infrastructure/pubspec.yaml
+++ b/shared_infrastructure/pubspec.yaml
@@ -5,7 +5,8 @@ version: 1.0.0
 
 environment:
   sdk: ^3.4.3
-
+dependencies:
+  http_parser: ^4.1.0
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
